Added support for TFLint with --deep paramter
Added support for TFLint (https://github.com/wata727/tflint).

Signed-off-by: Costin Galan <costin.galan@mambu.com>

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -41,3 +41,11 @@
   language: script
   files: (\.tf|\.tfvars)$
   exclude: \.terraform\/.*$
+
+- id: terraform_tflint
+  name: Terraform validate with tflint
+  description: Validates all Terraform configuration files with TFLint (https://github.com/wata727/tflint).
+  entry: terraform_tflint.sh
+  language: script
+  files: (\.tf|\.tfvars)$
+  exclude: \.terraform\/.*$
